--- a/final project/2021.Rmd
+++ b/final project/2021.Rmd
@@ -9,7 +9,6 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-
 ```{r}
 library(dplyr)
 library("tidyverse")
@@ -47,12 +46,43 @@ runApp("plot_iris.R")
 
 #scatter plot of all comparable variable.  
 ```{r}
+names(happy)
+```
+
+```{r}
 library(shiny)
 
 ui <- fluidPage(
-  selectInput("x", "Select X Variable", choices = c("print the wanted column name here"), selected = "one column name")
+  selectInput("x", "Select X Variable", choices = c("regional_indicator", "ladder_score", "logged_gdp_per_capita", "social_support", "healthy_life_expectancy", "freedom_to_make_life_choices"), selected = "ladder_score"),
   
-  selectInput("y", "Select Y Variable", choices = c("print wanted column name here"), selected = "one column name")
+  selectInput("y", "Select Y Variable", choices = c("regional_indicator", "ladder_score", "logged_gdp_per_capita", "social_support", "healthy_life_expectancy", "freedom_to_make_life_choices"), selected = "ladder_score"),
+  
+  plotOutput("plot")
+)
+
+server <- function(input, output) {
+  output$plot <- renderPlot({
+    
+    ggplot(data=happy, aes_string(x=input$x, y=input$y, color="country_name"))+
+      geom_point()+
+      theme(axis.text.x = element_text(angle = 30, hjust = 1))+
+      geom_smooth(method=lm, se=F, na.rm = T)+
+      theme_light(base_size=18)
+  
+})
+}
+
+shinyApp(ui, server)
+```
+
+#each variable selected by country
+```{r}
+library(shiny)
+
+ui <- fluidPage(
+  
+  radioButtons("x", "Select Fill Variable", choices=c("regional_indicator", "ladder_score", "logged_gdp_per_capita", "social_support", "healthy_life_expectancy", "freedom_to_make_life_choices"),
+               selected="regional_indicator"),
   
   plotOutput("plot")
 )
@@ -60,37 +90,22 @@ ui <- fluidPage(
 server <- function(input, output, session) {
   output$plot <- renderPlot({
     
-    ggplot(data=penguins, aes_string(x=input$x, y=input$y, color="region"))+
-      geom_point()+
-      theme_light(base_size=18)
-  
+    ggplot(data=happy, aes_string(x="country_name", fill=input$x))+
+      geom_bar(alpha=0.8, color="black")+
+      labs(x=NULL, y=NULL, fill="Country")
+})
 }
 
 shinyApp(ui, server)
 ```
 
-#density plot app for all numeric variable.  
 ```{r}
-library(shiny)
-
-ui <- fluidPage(titlePanel("Log 10 Homerange by Taxon"),
-                selectInput("x", "Select Taxon", 
-                            choices=c("birds", "lake fishes", "lizards", "mammals", "marine fishes", "river fishes", "snakes", "tortoises", "turtles"), selected="birds"),
-                plotOutput("plot", width="600px", height="500px")
-)
-
-server <- function(input, output, session) {
-  output$plot <- renderPlot({
-    homerange %>% 
-      filter(taxon==input$x) %>% 
-      ggplot(aes(x=log10.hra))+
-      geom_density(fill="steelblue", color="black", alpha=0.6)
-  })
-}
-
-shinyApp(ui, server)
+happy %>% 
+  
+  ggplot(aes(x=regional_indicator, y=ladder_score))+
+  geom_boxplot()+
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
-
 
 
 
